Updating repo to the current build